# SwingTrading

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  heartbeat.yml  no-lookahead-gate.yml  refresh.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: nightly-refresh-score-keyerror.md
.planning/phases/01-repo-skeleton-ci-hygiene/: 01-01-SUMMARY.md  01-01-pyproject-and-lockfile-PLAN.md  01-02-SUMMARY.md  01-02-source-tree-scaffolding-PLAN.md  01-03-SUMMARY.md  01-03-tests-scaffolding-PLAN.md  01-04-SUMMARY.md  01-04-makefile-and-preregistration-doc-PLAN.md  01-05-SUMMARY.md  01-05-ci-and-precommit-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VERIFICATION.md
.planning/phases/02-data-foundation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-indicator-panel-regime/: 03-01-SUMMARY.md  03-01-settings-and-schemas-PLAN.md  03-02-SUMMARY.md  03-02-macro-data-layer-PLAN.md  03-03-SUMMARY.md  03-03-indicator-panel-PLAN.md  03-04-SUMMARY.md  03-05-SUMMARY.md  (+9 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: heartbeat.txt  journal.sqlite  runs.jsonl
data/universe/: 2026-06-01.parquet
docs/: branch_protection.md  strategy_v1_preregistration.md
reports/: 2026-05-20.md  2026-05-27.md  2026-05-29.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-05.md  2026-06-08.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-15.md  2026-06-17.md  2026-06-18.md  2026-06-22.md  2026-06-24.md  2026-06-26.md  2026-06-29.md  2026-07-01.md  2026-07-02.md  2026-07-06.md  2026-07-08.md  2026-07-10.md  2026-07-13.md  2026-07-15.md  2026-07-17.md  2026-07-20.md  2026-07-22.md  2026-07-24.md
scripts/: backfill_snapshots.py  check_preregistration.py  generate_phase6_fixtures.py  watch_refresh.sh
src/screener/: __init__.py  cli.py  config.py  obs.py  persistence.py  regime.py  sizing.py
tests/: __init__.py  conftest.py  test_architecture.py  test_backtest_audit.py  test_backtest_no_lookahead.py  test_breakout_strength.py  test_canslim.py  test_canslim_lag.py  test_ci_ema_grep_gate.py  test_cli_smoke.py  test_composite_full.py  test_data_ohlcv.py  test_data_stooq.py  test_data_universe.py  test_fundamentals_io.py  test_indicators_panel.py  test_indicators_purity.py  test_indicators_rs.py  test_indicators_trend.py  test_indicators_volatility.py  test_indicators_volume.py  test_insider_cluster_buy.py  test_insider_io.py  test_journal.py  test_macro_refresh.py  test_patterns_golden.py  test_patterns_split.py  test_persistence.py  test_phase8_gitignore.py  test_phase8_workflow_static.py  test_pipeline_emits_run_log.py  test_pipeline_journal.py  test_playbook_tagger.py  test_preregistration_check.py  test_publishers_pipeline.py  test_publishers_report.py  test_publishers_snapshot.py  test_qullamaggie.py  test_regime.py  test_regime_golden.py  (+9 more)
tests/fixtures/: form4_cluster.sqlite  form4_no_cluster.sqlite
(+946 files in other folders)
