# IMPORTANT: This project depends on `pandas-ta-classic`, NOT `pandas-ta`.
# The original `twopirllc/pandas-ta` repo was removed in 2024-2025; the PyPI
# `pandas-ta` package has changed maintainer and is in beta. Do NOT switch.
# The Python module name is the same (`import pandas_ta`).
# See .planning/research/STACK.md "What NOT to Use" for context.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screener"
version = "0.1.0"
description = "Long-only EOD momentum swing-trading screener for Russell 1000 (Minervini + Qullamaggie + CANSLIM)"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [{ name = "Belwin Julian", email = "belwinjulian.a@gmail.com" }]

dependencies = [
  "pandas>=2.2,<3",
  "numpy>=2,<3",
  "scipy>=1.13,<2",
  "pyarrow>=17,<18",
  "pandas-ta-classic>=0.4.47,<0.5",
  "yfinance>=1.3.0,<2",
  "vectorbt>=1.0,<2",
  "edgartools>=5.30,<6",
  "finnhub-python>=2.4.28,<3",
  "fredapi>=0.5.2,<0.6",
  "pydantic-settings>=2.14,<3",
  "pandera>=0.31.1,<0.32",
  "structlog>=25.5,<26",
  "typer>=0.25,<0.26",
  "requests-cache>=1.3,<2",
  "tenacity>=9.1,<10",
  "pandas-datareader>=0.10,<0.11",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15,<0.16",
  "mypy>=1.20,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "hypothesis>=6,<7",
  "pre-commit>=4,<5",
  "pandas-stubs",
  "types-requests",
]
ml = []  # Reserved for M2: lightgbm, mlflow, shap. Locks the M2 install seam.

[project.scripts]
screener = "screener.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/screener"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF", "PD", "NPY"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/screener/indicators", "src/screener/signals", "src/screener/regime.py", "src/screener/sizing.py", "src/screener/persistence.py"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "screener.data.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "screener.publishers.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "screener.cli"
ignore_errors = true

[[tool.mypy.overrides]]
module = "screener.backtest.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "screener.catalysts.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "screener.ml.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*", "vectorbt", "vectorbt.*", "pandas_ta", "pandas_ta.*", "pandas_ta_classic", "pandas_ta_classic.*", "finnhub", "finnhub.*", "fredapi", "edgar", "edgar.*", "requests_cache", "tenacity", "tenacity.*", "pandas_datareader", "pandas_datareader.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/screener/signals --cov=src/screener/indicators --cov-fail-under=80 --strict-markers"
markers = [
  "slow: tests that take more than a couple seconds (deselect with -m 'not slow')",
  "integration: tests requiring external services (deselect with -m 'not integration')",
]
